--- a/ai/Megatron/English/Python/jupyter_notebook/Lab1-2_EstimateComputeDaysNeeded.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Lab1-2_EstimateComputeDaysNeeded.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "emerging-victoria",
+   "id": "inappropriate-diagnosis",
    "metadata": {},
    "source": [
     "# Estimate Time\n",
@@ -11,16 +11,16 @@
     "## Learning Objectives\n",
     "The goal of this lab is to estimate compute time needed for an end to end training run.\n",
     "\n",
-    "**Motivation**: In order to request for computing resources for a training job runs on a super computing cluster, one must provide information such as, the number of nodes/gpus requested as well as the estimated time for the training job run.\n",
+    "**Motivation**: In order to request computing resources for a training job to run on a super computing cluster, one must provide information such as, the number of nodes/gpus requested as well as the estimated time for an end-to-end training job.\n",
     "\n",
-    "Note: now that we obtained the toy text data via webscarpping from the previous lab, the next step is to request for compute resources. In order to train a very large langauge model, large compute resources must be requested and approved in advance. For the cluster admin to allocate resources to the training job, the applicant must provide minimal information such as the number of gpus necessary for the training job to run as well as estimate how long, i.e the time it takes, to compute one end to end training run.\n",
+    "Note: now that we obtained the toy text data via webscraping from the previous lab, the next step is to request compute resources. In order to train a very large language model, large compute resources must be requested and approved in advance. For the cluster admin to allocate resources to the training job, the applicant must provide minimal information such as the number of GPUs necessary for the training job to run as well as estimate how long, i.e the time it takes, to compute one end to end training run.\n",
     "\n",
     "This is what we are trying to achieve in this notebook, estimate training time per given parameters below.\n",
     "\n",
     "Training time (in seconds) is approximated with this equation : 8*T*P/n*X\n",
     "\n",
     "- T = dataset size measured in numbers of tokens in the dataset\n",
-    "- P = model parameters for GPT3 varients\n",
+    "- P = model parameters for GPT3 variants\n",
     "- n = number of GPUs in the compute cluster\n",
     "- x = achieved teraflops per GPU \n",
     "\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "convinced-wales",
+   "id": "victorian-frederick",
    "metadata": {},
    "source": [
     "---\n",
@@ -73,23 +73,23 @@
     "\n",
     "x = 163 teraFLOP/s per GPU \n",
     "\n",
-    "Question: How many hours/ days will you need given this scenaio above for you to compute an end to end training job ?\n",
+    "Question: How many hours/ days will you need given this scenario above for you to compute an end to end training job ?\n",
     "\n",
     "Answer: We should observe around **84 days** for an end to end training run\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "endangered-colleague",
+   "id": "velvet-community",
    "metadata": {},
    "source": [
-    "The below code block wrap the two scenarios within a function for automation."
+    "The below code block wraps the two scenarios within a function for automation."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "blocked-turning",
+   "id": "serial-queen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "posted-stanford",
+   "id": "practical-alcohol",
    "metadata": {},
    "source": [
     "Below is an example of expected outputs :\n",
@@ -143,14 +143,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dedicated-convergence",
+   "id": "dietary-artwork",
    "metadata": {},
    "source": [
     "---\n",
     "**Exercise** -\n",
     "\n",
-    "For a GPT3 model size of 70B parameters with approximatedly 300 Billion tokens in an existing dataset\n",
-    "You have requested 1/4 of the total number of gpus available in [BerzeLiUs](https://www.nsc.liu.se/support/systems/berzelius-getting-started/).\n",
+    "For a GPT3 model size of 70B parameters with approximately 300 Billion tokens in an existing dataset, you have requested 1/4 of the total number of GPUs available in [BerzeLiUs](https://www.nsc.liu.se/support/systems/berzelius-getting-started/).\n",
     "\n",
     "\n",
     "Question -\n",
@@ -161,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eight-family",
+   "id": "handed-television",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "animated-prevention",
+   "id": "smart-functionality",
    "metadata": {},
    "source": [
     "--- \n",
@@ -186,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rolled-navigation",
+   "id": "stuffed-leather",
    "metadata": {},
    "source": [
     "-----\n",
@@ -195,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "civic-water",
+   "id": "affecting-linux",
    "metadata": {},
    "source": [
     "-----\n",
