--- a/ai/Megatron/English/Python/jupyter_notebook/Lab1-3_MegatronFundementals.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Lab1-3_MegatronFundementals.ipynb
@@ -2,44 +2,44 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "sensitive-workstation",
+   "id": "flush-flooring",
    "metadata": {},
    "source": [
     "##  Megatron-LM Model Parallel Unit (MPU)\n",
     "---\n",
     "\n",
-    "NVIDIA's Megatron-LM makes training very large langauge models ( up to one trillion parameters ) a reality. Megatron-LM's core, Model Parallel Unit ( MPU ), is the backbones for [DeepSpeed](https://www.deepspeed.ai/features/#model-parallelism) and Facebook [FairScale](https://github.com/facebookresearch/fairscale), both of them integrate Megatron-LM's MPU in the backend.\n",
+    "NVIDIA's Megatron-LM makes training very large language models ( up to one trillion parameters ) a reality. Megatron-LM's core, Model Parallel Unit ( MPU ), is the backbones for [DeepSpeed](https://www.deepspeed.ai/features/#model-parallelism) and Facebook [FairScale](https://github.com/facebookresearch/fairscale), with both of them integrating Megatron-LM's MPU in the backend.\n",
     "\n",
-    "Bofore moving on to do model training, it is crucial to understand how Megatron-LM's core engine works, especially Tensor Model Parallism.\n",
+    "Before moving on to do model training, it is crucial to understand how Megatron-LM's core engine works, especially Tensor Model Parallelism.\n",
     "\n",
-    "Tensor Model Parallism is part of the Model Parallel Unit ( MPU ). When training Megatron-LM with multi-GPUs workload, for a smaller model, such as 1 Billion GPT3 model, applying Tensor Model Parallism is enough. However, scaling model size as well as the compute to multi-nodes training job is not a trivial task, Pipeline Model Parallism will then need to be in place as well as Tensor Model Parallism in order to achieve the near-linear scaling performance during model training runtime.\n",
+    "Tensor Model Parallelism is part of the MPU. When training Megatron-LM with multi-GPUs workload, for a smaller model, such as a one billion GPT3 model, applying Tensor Model Parallelism is enough. However, scaling the model size as well as the compute for a multi-nodes training job is not a trivial task, Pipeline Model Parallelism needs to be in place as well as Tensor Model Parallelism in order to achieve the near-linear scaling performance during model training runtime.\n",
     "\n",
-    "In this notebook, we will focus solely on Tensor Model Parallism, complimented with how Megatron-LM groups GPUs according to the training configuration. \n",
+    "In this notebook, we will focus solely on Tensor Model Parallelism, complemented with how Megatron-LM groups GPUs according to the training configuration. \n",
     "\n",
-    "Note: It is **NOT** required to have 16 GPUs (i.e. 2 nodes, each with 8 x A100 GPUs), this will be done **virtually** in the notebook via modified code to print out the grouping of the GPUs affinity per training configuration instead.\n",
+    "Note: It is **NOT** required to have 16 GPUs (i.e. 2 nodes, each with 8 x A100 GPUs), this will be done **virtually** in the notebook via modified code to print out the grouping of the GPUs affinity for the training configuration instead.\n",
     "\n",
     "## Learning Objectives\n",
     "\n",
-    "The goal of this lab is to understand how Megatro-LM's Model Parallel Unit (MPU) works, more specifically, we will cover :\n",
+    "The goal of this lab is to understand how Megatro-LM's MPU works. More specifically, we will cover :\n",
     "\n",
-    "    1. GPUs grouping affinity per training configuration.\n",
-    "    2. Tensor Model Parallism : \n",
+    "    1. GPUs grouping affinity for the training configuration.\n",
+    "    2. Tensor Model Parallelism : \n",
     "        - Column Parallel\n",
     "        - Row Parallel\n",
     "\n",
-    "Pipeline Model Parallism will be covered in the lecture presentation instead. \n"
+    "Pipeline Model Parallelism will be covered in the lecture presentation instead. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ordinary-motel",
+   "id": "drawn-advertiser",
    "metadata": {},
    "source": [
     "Before going through GPUs grouping affinity, we need to specify the following parameters :\n",
     "\n",
     "- p = Pipeline Model Parallel  \n",
     "- t = Tensor Model Parallel\n",
-    "- d = Data Parallal \n",
+    "- d = Data Parallel \n",
     "- n = Total number of GPUs used in the training\n",
     "\n",
     "Note that Megatron-LM requires p * t * d = n\n",
@@ -57,7 +57,7 @@
     "\n",
     "    world_size = 16  \n",
     "\n",
-    "Accoridng to Megatron-LM [initializer.py](https://github.com/NVIDIA/Megatron-LM/blob/90e0a0dd08159e1c95f4f9d99bb8687f327d36c3/megatron/mpu/initialize.py) we should see the following GPUs affinity grouping :\n",
+    "According to Megatron-LM [initializer.py](https://github.com/NVIDIA/Megatron-LM/blob/90e0a0dd08159e1c95f4f9d99bb8687f327d36c3/megatron/mpu/initialize.py) we should see the following GPUs affinity grouping :\n",
     "\n",
     "    8 data_parallel groups:\n",
     "        [g0, g2], [g1, g3], [g4, g6], [g5, g7], [g8, g10], [g9, g11], [g12, g14], [g13, g15]\n",
@@ -73,16 +73,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "settled-killing",
+   "id": "suburban-exclusive",
    "metadata": {},
    "source": [
-    "The code block below is modified from Megatron-LM [initializer.py](https://github.com/NVIDIA/Megatron-LM/blob/90e0a0dd08159e1c95f4f9d99bb8687f327d36c3/megatron/mpu/initialize.py) in order to avoid the need of having actual 16 physical GPUs to run this notebook, in another word, this notebook can be run without have any physical GPUs present."
+    "The code block below is modified from Megatron-LM [initializer.py](https://github.com/NVIDIA/Megatron-LM/blob/90e0a0dd08159e1c95f4f9d99bb8687f327d36c3/megatron/mpu/initialize.py) in order to avoid the need of actually having 16 physical GPUs to run this notebook, in another word, this notebook can be run without having any physical GPUs present."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "italic-bacon",
+   "id": "official-receptor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,12 +162,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sacred-parts",
+   "id": "complex-values",
    "metadata": {},
    "source": [
     "\n",
-    "Sanity check, verify, after run the below code cell, the result will match the comment inside of [megatron/mpu/initializer.py](https://github.com/NVIDIA/Megatron-LM/blob/main/megatron/mpu/initialize.py#L63).\n",
-    "Since we have a total of 16 GPUs **virtually** denoted by g0 ... g15, we expected to see the below result :\n",
+    "Sanity check - Verify, after running the below code cell, the result will match the comment inside of [megatron/mpu/initializer.py](https://github.com/NVIDIA/Megatron-LM/blob/main/megatron/mpu/initialize.py#L63).\n",
+    "Since we have a total of 16 GPUs **virtually** denoted by g0 ... g15, we expect to see the below result:\n",
     "\n",
     "            8 data_parallel groups:\n",
     "                [g0, g2], [g1, g3], [g4, g6], [g5, g7], [g8, g10], [g9, g11], [g12, g14], [g13, g15]\n",
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "killing-process",
+   "id": "numerous-somewhere",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,10 +191,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "starting-cache",
+   "id": "australian-portal",
    "metadata": {},
    "source": [
-    "Below is the expected outputs :\n",
+    "Below is the expected outputs:\n",
     "\n",
     "         ---------- world size is set to : 16 ---------- \n",
     "        > initializing tensor model parallel with size 2\n",
@@ -221,16 +221,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quantitative-restriction",
+   "id": "impressive-filename",
    "metadata": {},
    "source": [
-    "Try a different training configuration, what did you get ? "
+    "Try a different training configuration. What did you get ? "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "quarterly-russia",
+   "id": "restricted-favorite",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "earlier-verse",
+   "id": "realistic-disco",
    "metadata": {},
    "source": [
     "----------------------------------------------------------------------\n",
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "gothic-network",
+   "id": "communist-uniform",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
     "        input_size: first dimension of matrix A.\n",
     "        output_size: second dimension of matrix A.\n",
     "        bias: If true, add bias\n",
-    "        gather_output: If true, call all-gether on output and make Y avaiable\n",
+    "        gather_output: If true, call all-gether on output and make Y available\n",
     "                       to all GPUs, otherwise, every GPU will have its output\n",
     "                       which is Y_i = XA_i\n",
     "        init_method: method to initialize weights. Note that bias is always set\n",
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "accurate-injury",
+   "id": "tired-moment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,16 +436,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "limiting-retreat",
+   "id": "pediatric-february",
    "metadata": {},
    "source": [
-    "Peek inside Column Parallel Class, indeed Column Parallel can partition input matrix A into [A0, A1, A2 ...An] each of the partition matrix Ai, where i= 0, 1, 2 ...n, is sliced **_column-wised_**. Each column-wised partitioned matrix Ai will then be sent to the corresponding gpu based on the groupped gpu affinity. However, since we do not physically have 16 GPUs and therefore the usage of the modified code block above, will steer clear the need of allocating actual physical GPUs as resources. We will therefore only print out the shape of each colume-wised partitioned matrix Ai, and will **_NOT_** be sending the partition matrix Ai to any GPUs."
+    "Peek inside Column Parallel Class, indeed Column Parallel can partition input matrix A into [A0, A1, A2 ...An] each of the partition matrix Ai, where i= 0, 1, 2 ...n, is sliced column-wised. Each column-wised partitioned matrix Ai will then be sent to the corresponding GPU based on the grouped GPU affinity. However, since we do not physically have 16 GPUs and therefore are using the modified code block above, we will steer clear of the need  to allocate actual physical GPUs as resources. We will therefore only print out the shape of each column-wised partitioned matrix Ai, and will NOT be sending the partition matrix Ai to any GPUs."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "modern-journal",
+   "id": "competitive-honor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ranging-tiffany",
+   "id": "manual-roman",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fantastic-heaven",
+   "id": "soviet-turner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "medical-algeria",
+   "id": "alternate-glenn",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "worthy-courtesy",
+   "id": "impossible-orbit",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stock-christian",
+   "id": "flexible-cooper",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "smart-beginning",
+   "id": "broadband-producer",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ongoing-controversy",
+   "id": "united-watch",
    "metadata": {},
    "source": [
     "----------------------------------------------------------------------\n",
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "published-farmer",
+   "id": "silver-roommate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,16 +650,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "potential-nowhere",
+   "id": "explicit-filing",
    "metadata": {},
    "source": [
-    "Peek inside Row Parallel Class, indeed Row Parallel can partition input matrix A into [A0, A1, A2 ...An] each of the partition matrix Ai, where i= 0, 1, 2 ...n, Ai was chopped in a **row-wised** manner. Each row-wised partitioned matrix Ai will then be sent to the corresponding gpu based on the groupped gpu affinity. However, since we do not physically have 16 GPUs and therefore the usage of the modified code block above, will steer clear the need of allocating actual physical GPUs as resources. We will therefore only print out the shape of each row-wised partitioned matrix Ai, and will **_NOT_** be sending the partition matrix Ai to any GPUs."
+    "Peek inside Row Parallel Class, indeed Row Parallel can partition input matrix A into [A0, A1, A2 ...An] each of the partition matrix Ai, where i= 0, 1, 2 ...n, Ai was chopped in a row-wised manner. Each row-wised partitioned matrix Ai will then be sent to the corresponding GPU based on the grouped GPU affinity. However, since we do not physically have 16 GPUs and therefore are using modified code block above, we will steer clear of the need to allocate actual physical GPUs as resources. We will therefore only print out the shape of each row-wised partitioned matrix Ai, and will NOT be sending the partition matrix Ai to any GPUs."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "protective-escape",
+   "id": "whole-generic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lovely-dover",
+   "id": "invisible-chocolate",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -709,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adverse-emperor",
+   "id": "challenging-chassis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "micro-steal",
+   "id": "national-physics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "simplified-blink",
+   "id": "olympic-probe",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "public-greeting",
+   "id": "operating-lender",
    "metadata": {},
    "source": [
     "---\n",
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "polished-popularity",
+   "id": "literary-orchestra",
    "metadata": {},
    "source": [
     "-----\n",
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dutch-adrian",
+   "id": "passing-plaza",
    "metadata": {},
    "source": [
     "-----\n",
