--- a/ai/Megatron/English/Python/jupyter_notebook/Lab1-5_jsonfy_and_process2mmap.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Lab1-5_jsonfy_and_process2mmap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "structural-documentation",
+   "id": "aggressive-madness",
    "metadata": {},
    "source": [
     "## Jsonfy + convert to mmap\n",
@@ -14,28 +14,26 @@
     "\n",
     "In particular, we will cover the following steps :\n",
     "\n",
-    "    1. Understand the need of preprocessing data to mmap format.\n",
+    "    1. Understand the need for preprocessing data to mmap format.\n",
     "    2. Convert the raw text data into loose json format.\n",
-    "    3. Use preprocess_data.py to convert the cleaned data into mmap format as a preparation for training.\n",
-    "\n",
-    "\n"
+    "    3. Use preprocess_data.py to convert the cleaned data into mmap format as a preparation for training.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "alpha-yahoo",
+   "id": "alternative-supply",
    "metadata": {},
    "source": [
-    "1. Understand the need of preprocessing data to mmap format.\n",
+    "1. Understand the need for preprocessing data to mmap format.\n",
     "\n",
-    "The below cell blocks will demonstrate the speed up by using `np.memmap` than `np.load` to load an arbitrary data.\n",
+    "The below cell blocks will demonstrate the increased speed-up of using `np.memmap` instead of `np.load` to load arbitrary data.\n",
     "The `np.memmap` is integrated into preprocess_data.py. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "useful-fancy",
+   "id": "instructional-tunnel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "eligible-allen",
+   "id": "brave-barcelona",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "grave-violence",
+   "id": "warming-hardwood",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "living-cricket",
+   "id": "documentary-pointer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,24 +94,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "professional-circuit",
+   "id": "institutional-shape",
    "metadata": {},
    "source": [
     "2. jsonfy the raw text data into loose json format.\n",
     "\n",
     "The preprocess_data.py is expecting to receive json format data. Hence we need to convert the raw text data to json format first.\n",
-    "It is assumed that the json format data, will have one element per document, and the 'text' field in the json data, it's value will be extracted in preprocess_data.py. Other fields can also be specified for extraction. \n",
-    "An example of how the json data should look like, is given by the following : \n",
+    "It is assumed that the json format data, will have one element per document, and the value of the 'text' field in the json data will be extracted in preprocess_data.py. Other fields can also be specified for extraction. \n",
+    "An example of how the json data should look is showing in the following: \n",
     "\n",
     "    {\"src\": \"The Internet\", \"text\": \"jumps over the lazy dog\", \"type\": \"Eng\", \"id\": \"42\", \"title\": \"Second Part\"}\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "thirty-specialist",
+   "id": "frozen-vinyl",
    "metadata": {},
    "source": [
-    "We will now use the following python script to converting the raw text data into `extractedNVblogs.json` format as a preparation for the next step. \n",
+    "We will now use the following python script to convert the raw text data into `extractedNVblogs.json` format as a preparation for the next step. \n",
     "\n",
     "\n",
     "    python create_loose_json.py --help\n",
@@ -128,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "postal-conjunction",
+   "id": "surrounded-permit",
    "metadata": {},
    "outputs": [
     {
@@ -145,12 +143,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "iraqi-scoop",
+   "id": "limiting-window",
    "metadata": {},
    "source": [
     "3. Use preprocess_data.py to convert the cleaned data into mmap format as a preparation for training.\n",
     "\n",
-    "We are now ready to feed `extractedNVblogs.json`  data to Megatron-LM's preprocess_data.py in order to further convert the data to mmap format.\n",
+    "We are now ready to feed `extractedNVblogs.json`  data to Megatron-LM's preprocess_data.py in order to convert the data to mmap format.\n",
     "\n",
     "The following two code blocks will convert the `extractedNVblogs.json` to `NVblog_text_document.bin` and `NVblog_text_document.idx`"
    ]
@@ -158,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "promotional-pillow",
+   "id": "numerical-tuner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "acting-patrick",
+   "id": "inner-match",
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "short-siemens",
+   "id": "grand-demand",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -268,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "informational-willow",
+   "id": "aware-insert",
    "metadata": {},
    "source": [
     "---\n",
@@ -279,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "forbidden-emerald",
+   "id": "educational-ministry",
    "metadata": {},
    "source": [
     "-----\n",
@@ -288,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dedicated-russell",
+   "id": "genetic-gamma",
    "metadata": {},
    "source": [
     "-----\n",
