--- a/ai/Megatron/English/Python/jupyter_notebook/Lab1-6_Observe_GPT_runs_vs_performance.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Lab1-6_Observe_GPT_runs_vs_performance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "frozen-circumstances",
+   "id": "based-redhead",
    "metadata": {},
    "source": [
     "# Profiling Megatron-LM training\n",
@@ -10,47 +10,47 @@
     "\n",
     "## Learning Objectives\n",
     "\n",
-    "The goal of this lab is to profile the Megatron-LM's GPT model training runs with varying training configurations in order to ensure the GPUs performance across multi-GPUs or mult-nodes workload.\n",
+    "The goal of this lab is to profile the Megatron-LM's GPT model training runs with varying training configurations in order to ensure the GPU performance across multi-GPU or mult-nodes workload.\n",
     "\n",
     "\n",
     "**Motivation** : Why should we care about profiling ?\n",
     "  \n",
     "The estimated time-to-compute which we went through in `Lab1-2_EstimateComputeDaysNeeded.ipynb` is based on the assumption that the training run will have good GPUs performance across multi-GPUs or multi-nodes jobs. Bad training configurations could result in low or inconsistent GPUs utilization, which in turn, might prolong the training run.\n",
     "\n",
-    "In this notebook, we will cover the following : \n",
+    "In this notebook, we will cover the following: \n",
     "\n",
-    "    1. intro to NVIDIA profiling toolchain\n",
+    "    1. Intro to NVIDIA profiling toolchain\n",
     "    2. Run profiling to record training runs - naive vs. improved runs\n",
     "  \n",
     "A challenge will be presented to you at the end of this notebook, you are tasked to beat the profile of the improved run.\n",
     "\n",
-    "Use the knowledge gained from going through `Lab1-2_EstimateComputeDaysNeeded.ipynb` and the profiling lecture presentations, it will help you formulate strategies on training configuration in order to obtain winning profile.\n",
+    "Using the knowledge gained from going through `Lab1-2_EstimateComputeDaysNeeded.ipynb` and the profiling lecture presentations will help you to formulate strategies on training configuration in order to obtain a winning profile.\n",
     "\n",
     "Note: TAs and the NVIDIA profile expert will be available during this session when you go through this notebook, do reach out to them if you have questions."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fatal-neutral",
+   "id": "activated-reason",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
-    "1. intro to NVIDIA profiling toolchain :\n",
+    "1. Intro to NVIDIA profiling toolchain :\n",
     "\n",
     "<center><img src=\"./Megatron-LM/pics/NVprofilingToolchain.JPG\" width=\"800\"/></center>\n",
     "\n",
-    "Note: We will be going through intro to NVIDIA profiling with a NVIDIA profiling expert in the lecture presentation."
+    "Note: We will be going through an intro to NVIDIA profiling with a NVIDIA profiling expert in the lecture presentation."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dependent-corner",
+   "id": "exclusive-milan",
    "metadata": {},
    "source": [
     "The Profiling Workflow :\n",
     "\n",
-    "Profiling is an iterative process, we record the profiling run, visualize and analyze the profile in order to find area for improvement and act upon.\n",
+    "Profiling is an iterative process. We record the profiling run, then visualize and analyze the profile in order to find areas for improvement to act upon.\n",
     "\n",
     "<center><img src=\"./Megatron-LM/pics/profiling_workflow.JPG\" width=\"700\"/></center>\n",
     "\n"
@@ -58,25 +58,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "coated-manufacturer",
+   "id": "minor-confidentiality",
    "metadata": {},
    "source": [
-    "In order to properly analyze the profile obtained via real training runs. \n",
-    "First, we need to understanding how Megatron-LM launches the training job.\n",
+    "In order to properly analyze the profile obtained via real training runs. We first need to understand how Megatron-LM launches the training job.\n",
     "\n",
     "            ------------ Call out terminals as below illustrated ------------------------\n",
     "<center><img src=\"./Megatron-LM/pics/Alt_callout2terminals.JPG\" width=\"600\"/></center>\n",
     "\n",
     "\n",
-    "To do a live monitoring during profiling run.\n",
+    "To do live monitoring during a profiling run.\n",
     "\n",
-    "Examine the below [profilig video](https://youtu.be/bnN8ZohiZSI), this video will demonstrate how to call out and arrange 2 windows  within jupyter lab, then launch and monitor the profiling training runs with one window ( left ) print out the Megatron-LM training launching procedure, and the other window ( right ), show nvidia-smi live monitoring the performance of the GPUs. The video will also showcase how to call out the saved profile obtained from the training run. and visulize it using Nsight UI."
+    "Examine the below [profilig video](https://youtu.be/bnN8ZohiZSI), this video will demonstrate how to call out and arrange 2 windows  within jupyter lab, then launch and monitor the profiling training runs with one window (left) and print out the Megatron-LM training launching procedure. The other window (right), shows nvidia-smi live monitoring the performance of the GPUs. The video will also showcase how to call out the saved profile obtained from the training run. and visualize it using Nsight UI."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beautiful-outreach",
+   "id": "existing-folder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,12 +85,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continent-cause",
+   "id": "loved-correction",
    "metadata": {},
    "source": [
     "Reference documents : \n",
     "\n",
-    "[How to installing Nsight](https://developer.nvidia.com/gameworksdownload#?dn=nsight-systems-2021-4-1)\n",
+    "[How to install Nsight](https://developer.nvidia.com/gameworksdownload#?dn=nsight-systems-2021-4-1)\n",
     "\n",
     "[Nsight User Guide](https://docs.nvidia.com/nsight-systems/UserGuide/index.html)\n",
     "\n",
@@ -100,16 +99,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nonprofit-affairs",
+   "id": "meaningful-writer",
    "metadata": {},
    "source": [
-    "Install nvtx library, note that the nvtx tags were already implemented in this repo for your convenience."
+    "Install nvtx library. Note the nvtx tags were already implemented in this repo for your convenience."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "difficult-experience",
+   "id": "integral-sunday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,16 +117,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quality-monitor",
+   "id": "complimentary-point",
    "metadata": {},
    "source": [
-    "For the purpose of profiling, we will clean the following folders after each profiling run, in order to ensure trainining always start from scratch."
+    "For the purpose of profiling, we will clean the following folders after each profiling run, in order to ensure training always starts from scratch."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "subjective-cement",
+   "id": "juvenile-borough",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,10 +136,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hidden-professor",
+   "id": "numeric-comparison",
    "metadata": {},
    "source": [
-    "After the lecture with NVIDIA profiling champion, we are now ready to try out our very first profiling Megatron-LM training job.\n",
+    "After the lecture with the NVIDIA profiling champion, we are now ready to try out our very first profiling Megatron-LM training job.\n",
     "\n",
     "We start by profiling a naive run with a default configuration.\n",
     "\n",
@@ -165,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prompt-database",
+   "id": "effective-screw",
    "metadata": {},
    "source": [
     "To examine the naive profiling run bash script, click on [open profile_naive_run.sh ](./Megatron-LM/profile_naive_run.sh)\n",
@@ -176,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "individual-dictionary",
+   "id": "above-sound",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "undefined-bryan",
+   "id": "second-poster",
    "metadata": {},
    "source": [
     "\n",
@@ -214,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "clean-generation",
+   "id": "acute-prospect",
    "metadata": {},
    "source": [
     "---\n",
@@ -228,19 +227,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "excessive-tract",
+   "id": "disciplinary-chase",
    "metadata": {},
    "source": [
     "Below is a ReRun cell for experimentation of varying training configurations in order to obtain different training profiles.\n",
     "\n",
-    "Before each re-run, make sure you clear the checkpoint directory by running the blow code block to clear checkpoint files.\n",
+    "Before each re-run, make sure you clear the checkpoint directory by running the blow code block to clear the checkpoint files.\n",
     "<a id=\"Rerun_Cell\"></a>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "technical-input",
+   "id": "english-bahamas",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dramatic-master",
+   "id": "architectural-millennium",
    "metadata": {},
    "source": [
     "View/Modify the profile_2nd_run.sh, click to [open profile_2nd_run.sh](./Megatron-LM/profile_2nd_run.sh).\n",
@@ -260,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "yellow-radical",
+   "id": "related-discovery",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "received-blend",
+   "id": "valuable-attention",
    "metadata": {},
    "source": [
     "Below is an example of a successful profiling outputs :\n",
@@ -296,21 +295,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conservative-jamaica",
+   "id": "earned-marketplace",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
-    "The improved profiling run output file visulized with Nsight UI :\n",
+    "The improved profiling run output file visualized with Nsight UI:\n",
     "\n",
-    "Observe during training phrase, the GPUs utilizations are improved and more consistent( the light-blue bar ).\n",
+    "Observe that during the training phrase, the GPU utilizations are improved and more consistent( as shown in the light-blue bar ).\n",
     "\n",
     "<center><img src=\"./Megatron-LM/pics/2ndrun.JPG\" width=\"1000\"/></center>\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "moving-medicare",
+   "id": "naughty-desperate",
    "metadata": {},
    "source": [
     "<a id=\"TheChallenge\"></a>"
@@ -318,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "comprehensive-birmingham",
+   "id": "strong-invasion",
    "metadata": {},
    "source": [
     "----------------\n",
@@ -328,16 +327,16 @@
     "\n",
     "Constraints : \n",
     "\n",
-    "        - Use the given # of gpus available ( 2 x A100 GPUs 40GB ) \n",
+    "        - Use the given # of GPUs available ( 2 x A100 GPUs 40GB ) \n",
     "        - Only modify the parameters in the **modifiable section**\n",
     "        - Avoid OOM error\n",
     "        - training run must be finished and checkpoint must be saved successfully\n",
     "Task : \n",
     "      Given the above constraints, achieve a good looking profile. \n",
     "      \n",
-    "The winning profile visulized on Nsight UI should look similar to the following : \n",
+    "The winning profile visualized on Nsight UI should look similar to the following : \n",
     "\n",
-    "Observe the GPUs utilization are above 90% consistently ( the light-blue bars ) throughout **training** phrase ( the **dark-blue** bar ).\n",
+    "Observe the GPUs utilization are above 90% consistently (as shown in the **light-blue** bars) throughout the **training** phrase (as shown in the **dark-blue** bar).\n",
     "      \n",
     "<center><img src=\"./Megatron-LM/pics/GoodLookingProfile.JPG\" width=\"1000\"/></center>\n",
     "\n",
@@ -348,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "resistant-hearing",
+   "id": "ignored-nurse",
    "metadata": {},
    "source": [
     "--- \n",
@@ -358,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "british-history",
+   "id": "confirmed-audience",
    "metadata": {},
    "source": [
     "-----\n",
@@ -367,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "maritime-statistics",
+   "id": "fleet-union",
    "metadata": {},
    "source": [
     "-----\n",
