--- a/ai/Megatron/English/Python/jupyter_notebook/Lab2-3_train_own_GPT2BPETokenizer.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Lab2-3_train_own_GPT2BPETokenizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "rapid-arctic",
+   "id": "agreed-commercial",
    "metadata": {},
    "source": [
     "# Train custom GPTBPE  Tokenzer \n",
@@ -10,7 +10,7 @@
     "\n",
     "## Learning Objectives\n",
     "\n",
-    "In order to include the vocabulary of the local language, in this case it is Swedish, into GPTBPE tokenizer, we need to be able to train GPTBPE Tokenizer on local language raw text data. The trained GPTBPE Tokenizer will produce it's own vocab.json and merges.txt files which will be compatible with Megatron-LM's GPTBPE Tokenizer. \n",
+    "In order to include the vocabulary of the local language (in this case it is Swedish) into the GPTBPE tokenizer, we need to be able to train GPTBPE Tokenizer on local language with raw text data. The trained GPTBPE Tokenizer will produce it's own vocab.json and merges.txt files which will be compatible with Megatron-LM's GPTBPE Tokenizer. \n",
     "\n",
     "Previously in `Lab2-1_acquiring_data.ipynb`, we have acquired our own Swedish raw text data extracted from data source språkbank.\n",
     "Therefore, the goal of this notebook, is to train our own GPTBPE Tokenizer on the Swedish raw text data obtained from `Lab2-1_acquiring_data.ipynb`.\n",
@@ -19,8 +19,8 @@
     "\n",
     "The two options are covered in this notebook :\n",
     "\n",
-    "    1. option 1 - load from pretrained vocab and merge files, then continue training with the new raw text.\n",
-    "    2. option 2 - train a GPT compatible tokenizer from scratch.\n",
+    "    1. Option 1 - load from pretrained vocab and merge files, then continue training with the new raw text.\n",
+    "    2. Option 2 - train a GPT compatible tokenizer from scratch.\n",
     "\n",
     "\n",
     "We will use HuggingFace's Tokenizer library and the trainer function in order to train our own GPTBPE Tokenizer with our own raw text data.\n",
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "suspended-peace",
+   "id": "military-paintball",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "active-artwork",
+   "id": "quarterly-candidate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "average-boundary",
+   "id": "seasonal-minister",
    "metadata": {},
    "source": [
     "A python script for training custom GPTBPE Tokenizer is provided for your convenience : \n",
@@ -76,16 +76,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "harmful-grounds",
+   "id": "julian-phoenix",
    "metadata": {},
    "source": [
-    "1. option 1 - load from pretrained vocab and merge files, then continue training with the new raw text."
+    "1. Option 1 - load from pretrained vocab and merge files, then continue training with the new raw text."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "perceived-jerusalem",
+   "id": "severe-technical",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,10 +94,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "weird-index",
+   "id": "spectacular-swing",
    "metadata": {},
    "source": [
-    "Below is the expected outputs :\n",
+    "Below is the expected output:\n",
     "        \n",
     "        [00:00:14] Compute merges                           ███████░ 51520    /    56000\n",
     "        [00:00:14] Compute merges                           ███████░ 52640    /    56000\n",
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "emerging-music",
+   "id": "empty-cabin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,16 +131,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "filled-blast",
+   "id": "dramatic-punishment",
    "metadata": {},
    "source": [
-    "2. option 2 - train a GPT compatible tokenizer from scratch."
+    "2. Option 2 - train a GPT compatible tokenizer from scratch."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "uniform-complaint",
+   "id": "imported-supervision",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "disabled-pencil",
+   "id": "eleven-disclaimer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,10 +160,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tender-magic",
+   "id": "normal-adobe",
    "metadata": {},
    "source": [
-    "Below is the expected outputs :\n",
+    "Below is the expected output:\n",
     "    \n",
     "        [00:00:11] Compute merges                           ███████░ 30720    /    32000\n",
     "        [00:00:11] Compute merges                           ███████░ 31360    /    32000\n",
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "criminal-leadership",
+   "id": "straight-sleeping",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,17 +195,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "orange-alignment",
+   "id": "disabled-accuracy",
    "metadata": {},
    "source": [
     "--- \n",
     "## Links and Resources\n",
-    "Don't forget to check out additional resources such as [HuggingFace Tokenizer Documentation](https://huggingface.co/docs/tokenizers/python/latest/quicktour.html) and [Train GPTBPE Tokenizer in your own langauge](https://towardsdatascience.com/train-gpt-2-in-your-own-language-fc6ad4d60171)."
+    "Don't forget to check out additional resources such as [HuggingFace Tokenizer Documentation](https://huggingface.co/docs/tokenizers/python/latest/quicktour.html) and [Train GPTBPE Tokenizer in your own language](https://towardsdatascience.com/train-gpt-2-in-your-own-language-fc6ad4d60171)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "offshore-truck",
+   "id": "utility-duncan",
    "metadata": {},
    "source": [
     "-----\n",
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "clinical-tuition",
+   "id": "invisible-reynolds",
    "metadata": {},
    "source": [
     "-----\n",
