--- a/ai/Megatron/English/Python/jupyter_notebook/Lab2-5_run_Megatron_with_varying_config.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Lab2-5_run_Megatron_with_varying_config.ipynb
@@ -2,18 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "alike-prisoner",
+   "id": "passing-intersection",
    "metadata": {},
    "source": [
     "## Scale up model size\n",
     "---\n",
-    "In previous notebooks, we downloaded and extracted our own Swedish raw text with `Lab2-1_acquiring_data.ipynb`; practiced filter, clean and deduplicate the raw text data with `Lab2-2_SentenceBoundary_and_Deduplicate.ipynb` ; trained our own GPTBPETokenizer and fitted to the raw Swedish text with `Lab2-3_train_own_GPT2BPETokenizer.ipynb`; converted the raw text to mmap format integrating a custom sentence-splitter in `Lab2-4_customize_process2mmap.ipynb`.\n",
+    "In previous notebooks, we downloaded and extracted our own Swedish raw text with `Lab2-1_acquiring_data.ipynb`; practiced filtering, cleaning and deduplicating the raw text data with `Lab2-2_SentenceBoundary_and_Deduplicate.ipynb` ; trained our own GPTBPETokenizer using the raw Swedish text with `Lab2-3_train_own_GPT2BPETokenizer.ipynb`; and converted the raw text to mmap format integrating a custom sentence-splitter in `Lab2-4_customize_process2mmap.ipynb`.\n",
     "\n",
-    "We have learned all the essential components in order to customize Megatron-LM's default workflow in order to accommodate to specific langauge needs ( in this case, it is Swedish ). The obvious next step is to train the Megatron-LM GPT model with the processed Swedish data. \n",
+    "We have learned all the essential components in order to customize Megatron-LM's default workflow  accommodating to specific language needs (in this case, Swedish). The obvious next step is to train the Megatron-LM GPT model with the processed Swedish data.\n",
+    "However, constrainedt by how much compute resources one could get, i.e. the number of GPUs available for the training job, there is an upper limit of how big a model you can train.\n",
     "\n",
-    "However, constraint by how much compute resources one could get, that is, the number of GPUs available for the training job, there is an upper limit of how big a model you can train.\n",
-    "\n",
-    "We will test ou thow big a model we could train with 2 X A100 GPUs 40GB, by presenting a Challenge!\n",
+    "We will test ou t what size model we could train with 2 X A100 GPUs 40GB, by presenting a challenge!\n",
     "\n",
     "## **Challenge ** - Go big or go home !\n",
     "\n",
@@ -21,23 +20,23 @@
     "    - 2 x A100 GPUs 40G is allocated for this challenge.\n",
     "    - Only the parameters in the **##### Begin/End of modifiable blocks #####** are allowed to be changed.\n",
     "    - Avoid OOM !\n",
-    "    - Training run must be finished and checkpoint must be saved successfully.\n",
+    "    - Training run must be finished and the checkpoint must be saved successfully.\n",
     "\n",
     "- Task : \n",
-    "        Given the above constraints, train as BIG a GPT model as possible.\n",
+    "        Given the above constraints, train the biggest GPT model as possible.\n",
     "\n",
-    "- Winning criteria : The biggest model wins given the above constraints.\n",
+    "- Winning criteria : The biggest model wins!\n",
     "\n",
     "Note 1: Post the parameters you changed into the **##### Begin/End of modifiable blocks #####**  on bootcamp's slack channels for verification.\n",
     "\n",
     "Note 2: We purposefully turned-off nsys profiling in this challenge, because calling nsys profiling will introduce a small overhead, which will impact the maximum achievable model size.\n",
     "\n",
-    "Go directly to the code block and modify training configuration, click here to <a href=\"./Lab2-5_run_Megatron_with_varying_config.ipynb#MODIFY_CELL\">Jump to Code Cell and Modify Training Config</a> "
+    "Go directly to the code block and modify the training configuration, click here to <a href=\"./Lab2-5_run_Megatron_with_varying_config.ipynb#MODIFY_CELL\">Jump to Code Cell and Modify Training Config</a> "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "material-finland",
+   "id": "dated-lithuania",
    "metadata": {},
    "source": [
     "\n",
@@ -47,10 +46,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "driven-drawing",
+   "id": "narrative-population",
    "metadata": {},
    "source": [
-    "Modify and rerun the code blocks below to obtain a even bigger GPT model. \n",
+    "Modify and rerun the code blocks below to obtain an even bigger GPT model. \n",
     "\n",
     "\n",
     "<a id=\"MODIFY_CELL\"></a>\n",
@@ -59,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proprietary-marketing",
+   "id": "increased-difference",
    "metadata": {},
    "source": [
     "<a id=\"MODIFY_CELL\"></a>"
@@ -67,16 +66,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adjustable-engineer",
+   "id": "opposed-population",
    "metadata": {},
    "source": [
-    "Always clean the checkpoint folder to ensure trainining start from scratch."
+    "Always clean the checkpoint folder to ensure training starts from scratch."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "other-parts",
+   "id": "unsigned-banks",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "invisible-pepper",
+   "id": "relative-count",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,14 +162,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "formal-turner",
+   "id": "personalized-permit",
    "metadata": {},
    "source": [
-    "Check how big is your model. By modify the parameters in the [params_cnt.sh](./params_cnt.sh) to match the training parames above.\n",
+    "Check how big your model is by modify the parameters in the [params_cnt.sh](./params_cnt.sh) to match the training parames above.\n",
     "\n",
-    "I got 1.6 Billion :)  what about you ?\n",
+    "I got 1.6 illion ! :)  what about you ?\n",
     "\n",
-    "Modify the [params count](./params_cnt.sh) accoring to your training configuration.\n",
+    "Modify the [params count](./params_cnt.sh) according to your training configuration.\n",
     "\n",
     "After modification, run the below bash script to obtain the model size."
    ]
@@ -178,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "welcome-donor",
+   "id": "stuffed-possibility",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "noticed-trinity",
+   "id": "nominated-chuck",
    "metadata": {},
    "source": [
     "Below is an example of expected outputs:\n",
@@ -198,12 +197,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "convenient-ontario",
+   "id": "primary-praise",
    "metadata": {},
    "source": [
     "Re-run this cell below to get an even bigger GPT model\n",
     "\n",
-    "Remember to modify the [params count](./params_cnt.sh) to check how big is your model.\n",
+    "Remember to modify the [params count](./params_cnt.sh) to check how big your model is.\n",
     "\n",
     "Jump back and edit the SV_GPT_goingBIG.sh, click here to \n",
     "<a href=\"./Lab2-5_run_Megatron_with_varying_config.ipynb#MODIFY_CELL\">Jump back to modify and overwrite SV_GPT_goingBIG.sh </a> \n",
@@ -213,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "representative-kentucky",
+   "id": "divine-sierra",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unnecessary-african",
+   "id": "perfect-fisher",
    "metadata": {},
    "source": [
     "Below is an example of expected outputs:\n",
@@ -245,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pretty-handle",
+   "id": "chief-costume",
    "metadata": {},
    "source": [
     "---\n",
@@ -256,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caroline-induction",
+   "id": "collectible-turkey",
    "metadata": {},
    "source": [
     "-----\n",
@@ -265,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ranking-pillow",
+   "id": "legendary-forestry",
    "metadata": {},
    "source": [
     "-----\n",
