--- a/ai/Megatron/English/Python/jupyter_notebook/Megatron-LM/tools/openwebtext/Lab1-1_Website_scraping.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Megatron-LM/tools/openwebtext/Lab1-1_Website_scraping.ipynb
@@ -2,27 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "micro-village",
+   "id": "general-milwaukee",
    "metadata": {},
    "source": [
-    "## Website scrapping\n",
+    "## Website scraping\n",
     "\n",
-    "It is strongly recommanded to consult with local legal department for compliance before proceeding to scrap content from websites/webpages with permission.\n",
+    "It is strongly recommended to consult with your local legal department for compliance before proceeding to scrape content from websites/webpages with permission.\n",
     "\n",
-    "There is no one-fits-all website scrapping solution, when applying the following to other websites/webpages, please modify accoridngly.\n",
+    "There is no one-fits-all website scrapping solution, when applying the following to other websites/webpages, please modify accordingly.\n",
     "\n",
     "---\n",
     "\n",
     "## Learning Objectives\n",
     "The goal of this lab is to obtain raw text data via webscrapping.\n",
     "\n",
-    "To run through Megatron-LM default workflow in order to train a GPT model, we will need to obtain data first. The outcome of this notebook is the raw text data which will be used for subsequent tasks in Lab1.\n",
+    "To run through Megatron-LM's default workflow in order to train a GPT model, we will need to obtain data first. The outcome of this notebook is the raw text data which will be used for subsequent tasks in Lab1.\n",
     "\n",
     "This notebook covers the below steps : \n",
     "\n",
     "    1. Install necessary python libraries and download 2 python scripts which will be used for website crawling.\n",
     "    2. Crawl links from a seeded url and write to a text file.\n",
-    "    3. Remove incompliant links from the text file in order to ensure legal compliancy.\n",
+    "    3. Remove incompliant links from the text file in order to ensure legal compliance.\n",
     "    4. Fetch the corresponding webpage from each approved url and write it to html format.\n",
     "    5. Parse the html file and extract raw text and write to disk.\n",
     "    6. Move the `extractedNVblogs.txt` to the correct folder under **dataset**.\n",
@@ -32,16 +32,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "listed-stopping",
+   "id": "requested-committee",
    "metadata": {},
    "source": [
-    "1. install python libraries and download 2 python scripts which will be used for website crawling."
+    "1. Install python libraries and download 2 python scripts which will be used for website crawling."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "endangered-vessel",
+   "id": "material-inspection",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "designed-insight",
+   "id": "stainless-parent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "knowing-andorra",
+   "id": "fifth-scanner",
    "metadata": {},
    "source": [
     "2. Crawl links from a seeded url and write to a text file named `NVdevblog_urls.txt`"
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "natural-commander",
+   "id": "adopted-alignment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,10 +87,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incredible-lunch",
+   "id": "excellent-disorder",
    "metadata": {},
    "source": [
-    "3. Remove incompliant links from the text file in order to ensure legal compliancy.\n",
+    "3. Remove incompliant links from the text file in order to ensure legal compliance.\n",
     "\n",
     "    Normally, one should check with the legal and remove each incompliant link.\n",
     "\n",
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "angry-cattle",
+   "id": "european-arkansas",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "defined-interim",
+   "id": "basic-leader",
    "metadata": {},
    "source": [
     "4. Fetch the corresponding webpage from each approved url and write it to `XXX.html` format."
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "competitive-tower",
+   "id": "valid-driver",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "guided-certification",
+   "id": "pretty-contrast",
    "metadata": {},
    "source": [
     "Below is an example of expected outputs :\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "neural-method",
+   "id": "bridal-export",
    "metadata": {},
    "source": [
     "5. Parse the html file and extract the raw text data, which will be written to `extractedNVblogs.txt`."
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "affected-albania",
+   "id": "oriental-wound",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,16 +202,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "first-research",
+   "id": "adverse-republic",
    "metadata": {},
    "source": [
-    "6. Move the `extractedNVblogs.txt` to the correct folder under **dataset**. This file `extractedNVblogs.txt` will be used in subsequent notebooks in lab1."
+    "6. Move the `extractedNVblogs.txt` to the correct folder under the **dataset** folder. This file `extractedNVblogs.txt` will be used in subsequent notebooks in lab1."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fourth-certificate",
+   "id": "fifty-scratch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,16 +220,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cultural-retro",
+   "id": "infrared-jonathan",
    "metadata": {},
    "source": [
-    "**Note:** Please run below cell to free up space."
+    "**Note:** Please run the below cell to free up space."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "stretch-pattern",
+   "id": "federal-detroit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "black-courage",
+   "id": "boolean-arrow",
    "metadata": {},
    "source": [
     "Verify `extractedNVblogs.txt` is successfully moved to the correct folder."
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "standing-bridges",
+   "id": "smart-equivalent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prepared-ballot",
+   "id": "partial-roller",
    "metadata": {},
    "source": [
     "Below is an example of expected outputs :\n",
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cellular-termination",
+   "id": "liberal-scheme",
    "metadata": {},
    "source": [
     "--- \n",
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complex-valentine",
+   "id": "settled-insider",
    "metadata": {},
    "source": [
     "-----\n",
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "flush-bruce",
+   "id": "infinite-kingston",
    "metadata": {},
    "source": [
     "--- \n",
