--- a/ai/Megatron/English/Python/jupyter_notebook/Megatron-LM/tools/openwebtext/Lab2-1_acquiring_data.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Megatron-LM/tools/openwebtext/Lab2-1_acquiring_data.ipynb
@@ -2,37 +2,37 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fabulous-yield",
+   "id": "exotic-testing",
    "metadata": {},
    "source": [
     "## Acquire Swedish data \n",
     "---\n",
     "\n",
-    "For data licensing and privacy concerns, we will not providing training data in this bootcamp.\n",
+    "For data licensing and privacy concerns, we will not provide training data in this bootcamp.\n",
     "\n",
-    "However, we do need data in order to proceed the customization of Megatron-LM's workflow for local language needs ( in this case, it is Swedish ), hence, the first thing we need to do, is to acquire Swedish raw text data.\n",
+    "However, we do need data in order to proceed the customization of Megatron-LM's workflow for local language needs ( in this case, it is Swedish ), hence, the first thing we need to do, is acquiring some Swedish raw text data.\n",
     "\n",
     "This notebook is therefore provided to assist acquisition of Swedish raw text data from språkbanken.\n",
     "\n",
-    "following the steps given below -\n",
+    "Gollowing the steps given below:\n",
     "\n",
     "    1. Download data via wget and download the python script which will be used to extract the Swedish text.\n",
     "    \n",
     "    2. Unzip the data using bunzip and move the data to the correct folder under dataset.\n",
     "    \n",
-    "    3. A custom function is provided in order to extract raw txt file from xml file and move the text file to the correct folder under dataset.\n",
+    "    3. A custom function is provided in order to extract the raw txt file from the xml file and move the text file to the correct folder under dataset.\n",
     "\n",
     "\n",
     "\n",
     "**About the data source : språkbank**  :\n",
     "\n",
     "This data belongs to Språkbanken, Språkbanken Text is a research unit and part of the National Language Bank, a national e-infrastructure to support research based on linguistic data.\n",
-    "[read more about språkbank](https://spraakbanken.gu.se/om)\n"
+    "[Learn more about språkbank here](https://spraakbanken.gu.se/om)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "wrapped-fields",
+   "id": "disciplinary-sheet",
    "metadata": {},
    "source": [
     "1. Download data via wget and download the python script which will be used to extract the Swedish text."
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "silent-writer",
+   "id": "adverse-degree",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,16 +51,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sunset-moisture",
+   "id": "antique-extra",
    "metadata": {},
    "source": [
-    "2. unzip the data using bunzip and move the data to the correct folder under dataset."
+    "2. Unzip the data using bunzip and move the data to the correct folder under dataset."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "satisfied-absolute",
+   "id": "rolled-banking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "detected-volleyball",
+   "id": "isolated-mauritius",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "expired-compact",
+   "id": "driving-wagon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,16 +89,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "minimal-charm",
+   "id": "weighted-hygiene",
    "metadata": {},
    "source": [
-    "3. A custom function is provided in order to extract raw txt file from xml file and move the text file to the correct folder under dataset."
+    "3. A custom function is provided in order to extract the raw txt file from the xml file and move the text file to the correct folder under dataset."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hungry-fundamental",
+   "id": "encouraging-business",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,16 +135,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thick-consortium",
+   "id": "built-subcommittee",
    "metadata": {},
    "source": [
-    "Verify the output `webnyheter2013.txt` exist under `../../../../dataset/SV/`, we need this raw text file to proceed the subsequent notebooks for Lab2."
+    "Verify the output `webnyheter2013.txt` exists under `../../../../dataset/SV/`. We need this raw text file to proceed with the subsequent notebooks for Lab2."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bronze-interpretation",
+   "id": "conservative-andorra",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pleased-saskatchewan",
+   "id": "modern-handbook",
    "metadata": {},
    "source": [
     "-----\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "local-limit",
+   "id": "portable-excuse",
    "metadata": {},
    "source": [
     "-----\n",
